updating basic elements

--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 
   <head>
-  	<title>Emily Engle</title>
+  	<title>McKenzie Kennelly</title>
   	<meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
     <div class="title">
-      <p class="name">Emily Engle</p>
-      <p class="tagline">Co-President of <b>ACM-W</b> <img src="img/Logo.png" id="acmw-logo"></p>
+      <p class="name">McKenzie Kennelly</p>
+      <p class="tagline">CSE @ tOSU</p>
     </div>
   </body>
 
